clone damage daylock debug